# code

./: .gitignore  README.md
ALDS1_1_D/: 001.cpp  a.cpp  ins.cpp
abc075a/: a.cpp
abc075b/: a.cpp
abc078a/: a.cpp
abc079a/: a.cpp
abc079b/: a.cpp
abc079d/: Makefile
abc126_d/: Cargo.toml
abc126_d/src/: main.rs
adventofcode2020/: Cargo.toml  Makefile  day2_1.rs  day2_2.rs  day3_1.rs  day3_2.rs  day4_1.rs  day4_2.rs  day5_1.rs
agc005a/: a.cpp
agc018a/: a.cpp
agc019a/: Makefile
codefes2017cc/: .a.cpp.swp  Makefile  a.cpp
codefes2017cd/: Makefile  a.cpp  badcase.txt  badcase2.txt
grl_2_a/: Cargo.toml
grl_2_a/src/: 4_in.txt  6_in.txt  main.rs
hitachi2017_1_a/in/: 0-117.in  0-17.in  0-213.in  0-23.in  0-53151.in  0-53151351.in  0-5351.in  02.in  1-117.in  1-17171.in  1-31531.in  1-372375.in  1-51342.in  1-5332.in  1-5333145.in  1-561.in  1-5624.in  1-5631351.in  1-6523.in  1-897799.in
hitachi2017_1_a/score/: README_JP_r.md
hitachi2017_1_a/score/common/: constraints.h  rand_gen.h
hitachi2017_1_a/score/graph/: fullgraph.h  kingsgraph_square.h  randomgraph.h
hitachi2017_1_a/score/scripts/: Makefile  graph_generator  graph_generator.cpp  score_evaluator  score_evaluator.cpp
minimal_objc_window/: Makefile  main.m
numa/: run_dd.sh
proton/: in.txt
rust/: Cargo.toml
rust/src/: main.rs
tdpc_fibonacci/: Cargo.toml  Makefile
tdpc_fibonacci/src/: main.rs
template_atcoder_cpp/: Makefile
