[package]
name = "hello_world"
version = "0.1.0"
authors = ["hikalium <hikalium@hikalium.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"

[[bin]]
name = "day4_2"
path = "day4_2.rs"

[[bin]]
name = "day5_1"
path = "day5_1.rs"
